# exemplo_grSim

install/: local_setup.sh  setup.sh
install/grsim_sender/lib/grsim_sender/: grsim_communication
install/grsim_sender/share/grsim_sender/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/shared_interfaces/share/shared_interfaces/: local_setup.dsv  package.dsv  package.ps1  package.sh
install/shared_proto/share/ament_index/resource_index/package_run_dependencies/: shared_proto
install/shared_proto/share/shared_proto/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/shared_proto/share/shared_proto/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_targets-extras.cmake
install/vision/lib/vision/: node_receiver
install/vision/share/ament_index/resource_index/parent_prefix_path/: vision
install/vision/share/vision/: local_setup.sh  package.sh
log/: latest_build
src/grsim_sender/: CMakeLists.txt
src/grsim_sender/include/grsim_sender/: data_sender.hpp  vision_subscriber.hpp
src/grsim_sender/src/: data_sender.cpp  grsim_communication.cpp  vision_subscriber.cpp
src/shared_interfaces/: CMakeLists.txt  package.xml
src/shared_proto/: CMakeLists.txt
src/vision/: CMakeLists.txt
src/vision/include/vision/: vision_listener.hpp  vision_publisher.hpp
src/vision/src/: node_receiver.cpp  vision_listener.cpp  vision_publisher.cpp
